--- a/src/typography.css
+++ b/src/typography.css
@@ -560,7 +560,7 @@ figcaption {
     margin-bottom: var(--mrb-figcaption);
 }
 
-figure>*+figcaption,
+*+figcaption,
 blockquote>footer {
     margin-top: var(--mrt-figcaption);
     margin-bottom: 0;
